@startuml
class Hero {
        - name: String
        - health: int
        - experiencePoints: int
        - attackLevel: int
        - armorLevel: int
        - level: int
        - specialty: Specialty
        - rarity: Rarity
    }

class Specialty {
    - name
    - startingHealth
    - startingPower
    - startingArmor
    - extraPowerAgainst
}
class CardPack{
    - name
    - tokenCost
    - size
    - probability
}
class GachaRate {
      - probability
}
enum Rarity {
    COMMON(0),
    RARE(10),
    LEGENDARY(20);

    - bonus: int

    + Rarity(int bonus)
    + getBonus(): int
}
class Deck {
    - heroes: List<Hero>

    + Deck()
    + addHero(Hero)
    + getHeroes(): List<Hero>
}
class Player {

}
Player "1"- "1" Deck:\t\t\t\t\t
Hero "*"-"1" Rarity:\t\t\t\t
Hero "*" --o "1" Specialty:\t\t\t\t
Deck "*" --"*" Hero :"\t\t\t\t\t"
CardPack "*" --"*" Hero :"\t\t\t\t"
(CardPack,Rarity) .. GachaRate
@enduml